--- a/Platform.PCL/Realm.PCL/Realm.PCL.csproj
+++ b/Platform.PCL/Realm.PCL/Realm.PCL.csproj
@@ -34,6 +34,10 @@
     <Compile Include="..\..\RealmAssemblyInfo.cs">
       <Link>Properties\RealmAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="..\..\Shared\Realm.Shared\Linq\PredicateOperator.cs">
+      <Link>Extensions\PredicateOperator.cs</Link>
+    </Compile>
+    <Compile Include="Extensions\RealmResultsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealmPCLHelpers.cs" />
     <Compile Include="TransactionPCL.cs" />
@@ -145,9 +149,7 @@
       <Link>ISchemaSource.cs</Link>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Attributes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)packages\StyleCop.MSBuild.4.7.54.0\build\StyleCop.MSBuild.Targets" Condition="Exists('$(SolutionDir)packages\StyleCop.MSBuild.4.7.54.0\build\StyleCop.MSBuild.Targets')" />
 </Project>
