--- a/Platform.PCL/Realm.PCL/Realm.PCL.csproj
+++ b/Platform.PCL/Realm.PCL/Realm.PCL.csproj
@@ -34,7 +34,7 @@
     <Compile Include="..\..\RealmAssemblyInfo.cs">
       <Link>Properties\RealmAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="..\..\Shared\Realm.Shared\Linq\PredicateOperator.cs">
+    <Compile Include="..\..\Realm\Realm\Linq\PredicateOperator.cs">
       <Link>Extensions\PredicateOperator.cs</Link>
     </Compile>
     <Compile Include="Extensions\RealmResultsExtensions.cs" />
@@ -151,11 +151,7 @@
     <Compile Include="Thread Handover\ThreadSafeReferencePCL.cs" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Attributes\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Thread Handover\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)packages\StyleCop.MSBuild.4.7.54.0\build\StyleCop.MSBuild.Targets" Condition="Exists('$(SolutionDir)packages\StyleCop.MSBuild.4.7.54.0\build\StyleCop.MSBuild.Targets')" />
 </Project>
