--- a/Realm/Realm/Realm.csproj
+++ b/Realm/Realm/Realm.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Linq\PredicateOperator.cs" />
+    <Compile Include="Linq\RealmResultsExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ErrorMessages.cs" />
     <Compile Include="ISchemaSource.cs" />
